Selecting an occluded object in xray causes crash #56695

Closed
opened 2018-09-05 10:57:22 +02:00 by Andy Goralczyk · 5 comments
Member

Working: 2.79
Broken: 2ffe7dbef1

Example File: xray_crash.blend

Activate "OpenGL Depth Picking" in user pref.
In the 3D view, try to select the cube inside the bigger cube. This should lead to a straight crash.

Working: 2.79 Broken: 2ffe7dbef15 Example File: [xray_crash.blend](https://archive.blender.org/developer/F4571954/xray_crash.blend) Activate "OpenGL Depth Picking" in user pref. In the 3D view, try to select the cube inside the bigger cube. This should lead to a straight crash.
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy

Added subscribers: @fclem, @Sergey

Added subscribers: @fclem, @Sergey
Clément Foucault was assigned by Sergey Sharybin 2018-09-05 11:57:25 +02:00

@fclem, caused by 30ae0ce0e1 with this backtrace P779. The issue is that ps->gl.rect_depth_test is NULL at the moment when gpu_select_pick_load_id() is called.

This is some sort of state machine with i am not fully following yet, wouldn't mind having your help here :)

@fclem, caused by 30ae0ce0e1 with this backtrace [P779](https://archive.blender.org/developer/P779.txt). The issue is that `ps->gl.rect_depth_test` is `NULL` at the moment when `gpu_select_pick_load_id()` is called. This is some sort of state machine with i am not fully following yet, wouldn't mind having your help here :)

This issue was referenced by be00a22c23

This issue was referenced by be00a22c234fd2b7d81653c8ae870bc859f29618

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56695
No description provided.