Fix T56695: Selecting an occluded object in xray causes crash